// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useNotifications error notification render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <button
      class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
      data-component-type="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
      >
        Show Error
      </span>
    </button>
    <button
      class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
      data-component-type="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
      >
        Show Info
      </span>
    </button>
    <button
      class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
      data-component-type="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
      >
        Show Success
      </span>
    </button>
    <div
      class="makeStyles-root makeStyles-top makeStyles-right makeStyles-top makeStyles-right"
    >
      <div
        class="MuiCollapse-container SnackbarItem-collapseContainer MuiCollapse-entered"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper SnackbarItem-collapseWrapper"
        >
          <div
            class="MuiCollapse-wrapperInner SnackbarItem-collapseWrapperInner"
          >
            <div
              class="SnackbarItem-root SnackbarItem-wrappedRoot SnackbarItem-anchorOriginTopRight"
            >
              <div
                class="MuiPaper-root MuiSnackbarContent-root Notification-notificationRed Notification-notificationShadow Notification-roundedBorders Notification-notification PicassoNotification-formNotification MuiPaper-elevation6"
                role="alert"
                style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
              >
                <div
                  class="MuiSnackbarContent-message"
                >
                  <div
                    class="PicassoContainer-flex"
                    data-testid="notification"
                  >
                    <div
                      class="PicassoContainer-centerAlignItems PicassoContainer-flex Notification-iconWrapper"
                    >
                      <svg
                        class="PicassoSvgExclamationSolid24-root PicassoSvgExclamationSolid24-red"
                        style="min-width: 24px; min-height: 24px;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0zm0 16a1 1 0 100 2 1 1 0 000-2zm0-10a1 1 0 00-1 1v7a1 1 0 002 0V7a1 1 0 00-1-1z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiTypography-root PicassoTypography-bodyMedium Notification-content Notification-contentCloseButton MuiTypography-body1"
                    >
                      Error message
                    </div>
                    <button
                      class="MuiButtonBase-root PicassoButton-small PicassoButton-primary PicassoButton-root PicassoButtonCircular-primary PicassoButtonCircular-root Notification-close"
                      data-component-type="button"
                      tabindex="0"
                      title="Close Notification"
                      type="button"
                    >
                      <span
                        class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
                      >
                        <svg
                          class="PicassoSvgCloseMinor16-root PicassoButton-icon Notification-closeIcon"
                          style="min-width: 16px; min-height: 16px;"
                          viewBox="0 0 16 16"
                        >
                          <path
                            d="M8.707 8l3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`useNotifications info notification render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <button
      class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
      data-component-type="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
      >
        Show Error
      </span>
    </button>
    <button
      class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
      data-component-type="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
      >
        Show Info
      </span>
    </button>
    <button
      class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
      data-component-type="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
      >
        Show Success
      </span>
    </button>
    <div
      class="makeStyles-root makeStyles-top makeStyles-right makeStyles-top makeStyles-right"
    >
      <div
        class="MuiCollapse-container SnackbarItem-collapseContainer MuiCollapse-entered"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper SnackbarItem-collapseWrapper"
        >
          <div
            class="MuiCollapse-wrapperInner SnackbarItem-collapseWrapperInner"
          >
            <div
              class="SnackbarItem-root SnackbarItem-wrappedRoot SnackbarItem-anchorOriginTopRight"
            >
              <div
                class="MuiPaper-root MuiSnackbarContent-root Notification-notificationWhite Notification-notificationShadow Notification-roundedBorders Notification-notification PicassoNotification-generalNotification MuiPaper-elevation6"
                role="alert"
                style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
              >
                <div
                  class="MuiSnackbarContent-message"
                >
                  <div
                    class="PicassoContainer-flex"
                    data-testid="notification"
                  >
                    <div
                      class="PicassoContainer-centerAlignItems PicassoContainer-flex Notification-iconWrapper"
                    >
                      <svg
                        class="PicassoSvgInfo24-root PicassoSvgInfo24-grey"
                        style="min-width: 24px; min-height: 24px;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M11.5 22C5.701 22 1 17.299 1 11.5S5.701 1 11.5 1 22 5.701 22 11.5 17.299 22 11.5 22zm0-1a9.5 9.5 0 100-19 9.5 9.5 0 000 19zM11 9h1v8h-1V9zm0-3h1v1h-1V6z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiTypography-root PicassoTypography-bodyMedium Notification-content Notification-contentCloseButton MuiTypography-body1"
                    >
                      Info message
                    </div>
                    <button
                      class="MuiButtonBase-root PicassoButton-small PicassoButton-primary PicassoButton-root PicassoButtonCircular-primary PicassoButtonCircular-root Notification-close"
                      data-component-type="button"
                      tabindex="0"
                      title="Close Notification"
                      type="button"
                    >
                      <span
                        class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
                      >
                        <svg
                          class="PicassoSvgCloseMinor16-root PicassoButton-icon Notification-closeIcon"
                          style="min-width: 16px; min-height: 16px;"
                          viewBox="0 0 16 16"
                        >
                          <path
                            d="M8.707 8l3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`useNotifications success notification render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <button
      class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
      data-component-type="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
      >
        Show Error
      </span>
    </button>
    <button
      class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
      data-component-type="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
      >
        Show Info
      </span>
    </button>
    <button
      class="MuiButtonBase-root PicassoButton-medium PicassoButton-primary PicassoButton-root"
      data-component-type="button"
      tabindex="0"
      type="button"
    >
      <span
        class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
      >
        Show Success
      </span>
    </button>
    <div
      class="makeStyles-root makeStyles-top makeStyles-right makeStyles-top makeStyles-right"
    >
      <div
        class="MuiCollapse-container SnackbarItem-collapseContainer MuiCollapse-entered"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper SnackbarItem-collapseWrapper"
        >
          <div
            class="MuiCollapse-wrapperInner SnackbarItem-collapseWrapperInner"
          >
            <div
              class="SnackbarItem-root SnackbarItem-wrappedRoot SnackbarItem-anchorOriginTopRight"
            >
              <div
                class="MuiPaper-root MuiSnackbarContent-root Notification-notificationGreen Notification-notificationShadow Notification-roundedBorders Notification-notification PicassoNotification-formNotification MuiPaper-elevation6"
                role="alert"
                style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
              >
                <div
                  class="MuiSnackbarContent-message"
                >
                  <div
                    class="PicassoContainer-flex"
                    data-testid="notification"
                  >
                    <div
                      class="PicassoContainer-centerAlignItems PicassoContainer-flex Notification-iconWrapper"
                    >
                      <svg
                        class="PicassoSvgCheckSolid24-root PicassoSvgCheckSolid24-green"
                        style="min-width: 24px; min-height: 24px;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0zm4.034 7.667l-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377z"
                        />
                      </svg>
                    </div>
                    <div
                      class="MuiTypography-root PicassoTypography-bodyMedium Notification-content Notification-contentCloseButton MuiTypography-body1"
                    >
                      Success message
                    </div>
                    <button
                      class="MuiButtonBase-root PicassoButton-small PicassoButton-primary PicassoButton-root PicassoButtonCircular-primary PicassoButtonCircular-root Notification-close"
                      data-component-type="button"
                      tabindex="0"
                      title="Close Notification"
                      type="button"
                    >
                      <span
                        class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
                      >
                        <svg
                          class="PicassoSvgCloseMinor16-root PicassoButton-icon Notification-closeIcon"
                          style="min-width: 16px; min-height: 16px;"
                          viewBox="0 0 16 16"
                        >
                          <path
                            d="M8.707 8l3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
